2006-12-29  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-view.c: move idle removal in destroy to prevent
	so that it doesn't run on a destroyed view.

2006-12-28  Steve Frécinaux  <code@istique.net>

	Fix Bug 342042 – plugins create menus items which are not translatable.

	* plugins/externaltools/tools/library.py: Support l10n of embedded
	metadata keys, the way desktop files do.

	* plugins/externaltools/data/Makefile.am:
	* plugins/externaltools/data/build.desktop.in:
	* plugins/externaltools/data/build.tool.in:
	* plugins/externaltools/data/open-terminal-here.desktop.in:
	* plugins/externaltools/data/open-terminal-here.tool.in:
	* plugins/externaltools/data/remove-trailing-spaces.desktop.in:
	* plugins/externaltools/data/remove-trailing-spaces.tool.in:
	* plugins/externaltools/data/run-command.desktop.in:
	* plugins/externaltools/data/run-command.tool.in:

	Split the tools into a script file and a (translatable, intltoolable)
	desktop file. Those are merged at build time by a custom script working
	the way the script save code works in library.py.

	* plugins/externaltools/data/build:
	* plugins/externaltools/data/open-terminal-here:
	* plugins/externaltools/data/remove-trailing-spaces:
	* plugins/externaltools/data/run-command:
	
	Old files have been removed (now these files are autogenerated).

	* plugins/externaltools/scripts/gedit-tool-merge.pl: New custom script
	to merge desktop file and script file to create tool files.

	* configure.ac:
	* plugins/externaltools/Makefile.am:
	* plugins/externaltools/scripts/Makefile.am:
	
	Add the new merge script to EXTRA_DIST.
	
2006-12-21  Paolo Borelli  <pborelli@katamail.com>

	* plugins/docinfo/gedit-docinfo-plugin.c: do not crash when
	getting the stats of an empty document. Bug #388028 .

=== gedit 2.17.2 ===

2006-12-18  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.17.2 released

2006-12-18  Paolo Borelli  <pborelli@katamail.com>
