@@ -1,5 +1,10 @@
 2006-12-29  Paolo Borelli  <pborelli@katamail.com>
 
+	* plugins/filebrowser/gedit-file-browser-widget.c: allow F2
+	to rename and handle better modifiers for Delete.
+
+2006-12-29  Paolo Borelli  <pborelli@katamail.com>
+
 	* gedit/gedit-view.c: move idle removal in destroy to prevent
 	so that it doesn't run on a destroyed view.
 
